@@ -13,5 +13,7 @@ t/000_basic.t
 t/100_metasyntactic.t
 t/950_pod.t
 t/960_pod_coverage.t
+t/980_versions.t
+t/982_git.t
 Changes
 README
