@@ -1,3 +1,6 @@
+Version 2012053102
++ Add author tests
+
 Version 2012053101 Thu May 31 13:29:07 CEST 2012
 + Theme: nehi
 
